--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "night-owl",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "test": "mocha --recursive"
+  },
   "dependencies": {
   }
 }
